Finalized code for upload to github and fixed comments

--- a/function.ipynb
+++ b/function.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -21,7 +21,7 @@
        "['EASTER 26', 'VDAY 26', 'Fall 25']"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +262,7 @@
          "type": "unknown"
         }
        ],
-       "ref": "cabf2e7a-6568-4567-a52c-76389f330e35",
+       "ref": "25ff9ba1-234e-4333-bd90-c94d2adae5a0",
        "rows": [
         [
          "0",
@@ -1982,7 +1982,7 @@
        "[22 rows x 43 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2003,7 +2003,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -2022,7 +2022,7 @@
        "      dtype='object', name=1)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2043,7 +2043,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -2080,7 +2080,7 @@
          "type": "float"
         }
        ],
-       "ref": "2ffc3da6-94a7-4df7-9b18-cdf7b73bcc9f",
+       "ref": "e9bbccc0-540c-419d-b80b-0851b6e5ed8c",
        "rows": [
         [
          "0",
@@ -2202,7 +2202,7 @@
        "Name: FUEL_PRICE, dtype: float64"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2231,7 +2231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -2250,7 +2250,7 @@
        "      dtype='object', name=1)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2261,19 +2261,149 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "ename": "TypeError",
-     "evalue": "FreightSize.boxPrice() takes 1 positional argument but 2 were given",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
-      "\u001b[31mTypeError\u001b[39m                                 Traceback (most recent call last)",
-      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 22\u001b[39m\n\u001b[32m      8\u001b[39m df = df.drop(columns=freightColumnsDropped)\n\u001b[32m     10\u001b[39m freightCalc = FreightSize(dataframe=df,\n\u001b[32m     11\u001b[39m                 lengthCol=\u001b[33m'\u001b[39m\u001b[33mLENGTH\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     12\u001b[39m                 widthCol=\u001b[33m'\u001b[39m\u001b[33mWIDTH\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m   (...)\u001b[39m\u001b[32m     19\u001b[39m                 extrasCol=\u001b[33m'\u001b[39m\u001b[33mEXTRAS\u001b[39m\u001b[33m'\u001b[39m,\n\u001b[32m     20\u001b[39m                 boxTotalCol=\u001b[33m'\u001b[39m\u001b[33mBOX_TOTAL\u001b[39m\u001b[33m'\u001b[39m)\n\u001b[32m---> \u001b[39m\u001b[32m22\u001b[39m \u001b[43mfreightCalc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mboxPrice\u001b[49m\u001b[43m(\u001b[49m\u001b[43mfreightCalc\u001b[49m\u001b[43m.\u001b[49m\u001b[43mroundedVolumeCalc\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m     24\u001b[39m freightCalc.freight_size(roundedVolume=freightCalc.roundedVolumeCalc(),\n\u001b[32m     25\u001b[39m                          tariffDuty=freightCalc.tariffDuties())\n\u001b[32m     27\u001b[39m \u001b[38;5;66;03m# freightCalc.freight_size(roundedVolume=freightCalc.roundedVolumeCalc(), tariffDuty= )\u001b[39;00m\n",
-      "\u001b[31mTypeError\u001b[39m: FreightSize.boxPrice() takes 1 positional argument but 2 were given"
-     ]
+     "data": {
+      "application/vnd.microsoft.datawrangler.viewer.v0+json": {
+       "columns": [
+        {
+         "name": "index",
+         "rawType": "int64",
+         "type": "integer"
+        },
+        {
+         "name": "BQT_FREIGHT_PRICE",
+         "rawType": "float64",
+         "type": "float"
+        }
+       ],
+       "ref": "143b166f-e6bd-4e8f-8535-c423bde6ed39",
+       "rows": [
+        [
+         "0",
+         "3.08"
+        ],
+        [
+         "1",
+         "2.09"
+        ],
+        [
+         "2",
+         "3.24"
+        ],
+        [
+         "3",
+         "3.16"
+        ],
+        [
+         "4",
+         "0.93"
+        ],
+        [
+         "5",
+         "1.19"
+        ],
+        [
+         "6",
+         "3.02"
+        ],
+        [
+         "7",
+         "4.11"
+        ],
+        [
+         "8",
+         "1.93"
+        ],
+        [
+         "9",
+         "2.15"
+        ],
+        [
+         "10",
+         "0.69"
+        ],
+        [
+         "11",
+         "1.57"
+        ],
+        [
+         "12",
+         "0.41"
+        ],
+        [
+         "13",
+         "0.31"
+        ],
+        [
+         "14",
+         "0.66"
+        ],
+        [
+         "15",
+         "0.67"
+        ],
+        [
+         "16",
+         "0.52"
+        ],
+        [
+         "17",
+         "0.59"
+        ],
+        [
+         "18",
+         "0.6"
+        ],
+        [
+         "19",
+         "0.62"
+        ],
+        [
+         "20",
+         "0.58"
+        ],
+        [
+         "21",
+         "0.62"
+        ]
+       ],
+       "shape": {
+        "columns": 1,
+        "rows": 22
+       }
+      },
+      "text/plain": [
+       "0     3.08\n",
+       "1     2.09\n",
+       "2     3.24\n",
+       "3     3.16\n",
+       "4     0.93\n",
+       "5     1.19\n",
+       "6     3.02\n",
+       "7     4.11\n",
+       "8     1.93\n",
+       "9     2.15\n",
+       "10    0.69\n",
+       "11    1.57\n",
+       "12    0.41\n",
+       "13    0.31\n",
+       "14    0.66\n",
+       "15    0.67\n",
+       "16    0.52\n",
+       "17    0.59\n",
+       "18    0.60\n",
+       "19    0.62\n",
+       "20    0.58\n",
+       "21    0.62\n",
+       "Name: BQT_FREIGHT_PRICE, dtype: float64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -2283,8 +2413,10 @@
     "dutyMultiInp = 0.218\n",
     "precioKiloInp = 1.95\n",
     "\n",
-    "freightColumnsDropped = ['BOX_TOTAL','BOX_PRICE','TARIFF_DUTY','BQT_FREIGHT_PRICE','PACK','VOLUME','ROUNDED_VOLUME','BQT_FREIGHT_PRICE','TARIFF_DUTY', 'WP_HEIGHT', 'WP_WIDTH', 'WP_DEPTH', 'CUBE', 'PRICE_PER_BUNCH', 'WET_PACK_BQT_PRICE', 'CUBE_WET_PACK', 'FUEL_PRICE', 'PRICE_PER_BOX', 'FREIGHT_PRICE_PER_BQT_USA']\n",
+    "freightColumnsDropped = ['BQT_PRICE','FLETE_MIAMI', 'WET_PACK', 'FREIGHT' ,'TOTAL_COST','BOX_TOTAL','BOX_PRICE','TARIFF_DUTY','BQT_FREIGHT_PRICE','PACK','VOLUME','ROUNDED_VOLUME','BQT_FREIGHT_PRICE','TARIFF_DUTY', 'WP_HEIGHT', 'WP_WIDTH', 'WP_DEPTH', 'CUBE', 'PRICE_PER_BUNCH', 'WET_PACK_BQT_PRICE', 'CUBE_WET_PACK', 'FUEL_PRICE', 'PRICE_PER_BOX', 'FREIGHT_PRICE_PER_BQT_USA']\n",
     "df = df.drop(columns=freightColumnsDropped)\n",
+    "\n",
+    "df['BQT_PRICE'] = df['FARM_PRICE'] * df['STEM_BUNCH']\n",
     "\n",
     "freightCalc = FreightSize(dataframe=df,\n",
     "                lengthCol='LENGTH',\n",
@@ -2298,28 +2430,66 @@
     "                extrasCol='EXTRAS',\n",
     "                boxTotalCol='BOX_TOTAL')\n",
     "\n",
-    "# freightCalc.boxPrice()\n",
+    "freightCalc.boxPrice()\n",
     "\n",
-    "freightCalc.freight_size(roundedVolume=freightCalc.roundedVolumeCalc(),\n",
-    "                         tariffDuty=freightCalc.tariffDuties())\n",
+    "freightCalc.freightSize()\n",
     "\n",
     "# freightCalc.freight_size(roundedVolume=freightCalc.roundedVolumeCalc(), tariffDuty= )"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Index(['PRODUCT', 'FARM', 'SIZE', 'BOX_TYPE', 'FARM_PRICE', 'STEM_BUNCH',\n",
+       "       'CAP', 'CLIENT_PRICE', 'UNITS', 'BUNCH_PER_BOX', 'STEMS_PER_BOX',\n",
+       "       'LENGTH', 'WIDTH', 'HEIGHT', 'PRICE_KILO', 'EXTRAS', 'WET_PACK_COMPANY',\n",
+       "       'WET_PACK_PRICE', 'TRANSPORTATION_PALLET_PRICE', 'PRICE_PER_CUBE',\n",
+       "       'PRICE_PER_PIECE', 'BQT_PRICE', 'ROUNDED_VOLUME', 'BOX_PRICE',\n",
+       "       'TARIFF_DUTY', 'BQT_FREIGHT_PRICE'],\n",
+       "      dtype='object', name=1)"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "df.columns"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "KeyError",
+     "evalue": "'PRECIO_KILO'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/dev/personal/cocoTool/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3812\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3811\u001b[39m \u001b[38;5;28;01mtry\u001b[39;00m:\n\u001b[32m-> \u001b[39m\u001b[32m3812\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43m_engine\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mcasted_key\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   3813\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m \u001b[38;5;28;01mas\u001b[39;00m err:\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:167\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/index.pyx:196\u001b[39m, in \u001b[36mpandas._libs.index.IndexEngine.get_loc\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7088\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32mpandas/_libs/hashtable_class_helper.pxi:7096\u001b[39m, in \u001b[36mpandas._libs.hashtable.PyObjectHashTable.get_item\u001b[39m\u001b[34m()\u001b[39m\n",
+      "\u001b[31mKeyError\u001b[39m: 'PRECIO_KILO'",
+      "\nThe above exception was the direct cause of the following exception:\n",
+      "\u001b[31mKeyError\u001b[39m                                  Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[18]\u001b[39m\u001b[32m, line 15\u001b[39m\n\u001b[32m     12\u001b[39m roundedVol = df[\u001b[33m'\u001b[39m\u001b[33mROUNDED_VOLUME\u001b[39m\u001b[33m'\u001b[39m]\n\u001b[32m     14\u001b[39m \u001b[38;5;66;03m# Precio Caja\u001b[39;00m\n\u001b[32m---> \u001b[39m\u001b[32m15\u001b[39m df[\u001b[33m'\u001b[39m\u001b[33mPRECIO_CAJA\u001b[39m\u001b[33m'\u001b[39m] = roundedVol * \u001b[43mdf\u001b[49m\u001b[43m[\u001b[49m\u001b[33;43m'\u001b[39;49m\u001b[33;43mPRECIO_KILO\u001b[39;49m\u001b[33;43m'\u001b[39;49m\u001b[43m]\u001b[49m\n\u001b[32m     17\u001b[39m \u001b[38;5;66;03m# Duties\u001b[39;00m\n\u001b[32m     18\u001b[39m dutyMultiplier = \u001b[32m0.218\u001b[39m\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/dev/personal/cocoTool/.venv/lib/python3.12/site-packages/pandas/core/frame.py:4113\u001b[39m, in \u001b[36mDataFrame.__getitem__\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   4111\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m.columns.nlevels > \u001b[32m1\u001b[39m:\n\u001b[32m   4112\u001b[39m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m._getitem_multilevel(key)\n\u001b[32m-> \u001b[39m\u001b[32m4113\u001b[39m indexer = \u001b[38;5;28;43mself\u001b[39;49m\u001b[43m.\u001b[49m\u001b[43mcolumns\u001b[49m\u001b[43m.\u001b[49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[32m   4114\u001b[39m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[32m   4115\u001b[39m     indexer = [indexer]\n",
+      "\u001b[36mFile \u001b[39m\u001b[32m~/Desktop/dev/personal/cocoTool/.venv/lib/python3.12/site-packages/pandas/core/indexes/base.py:3819\u001b[39m, in \u001b[36mIndex.get_loc\u001b[39m\u001b[34m(self, key)\u001b[39m\n\u001b[32m   3814\u001b[39m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[32m   3815\u001b[39m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc.Iterable)\n\u001b[32m   3816\u001b[39m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[32m   3817\u001b[39m     ):\n\u001b[32m   3818\u001b[39m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[32m-> \u001b[39m\u001b[32m3819\u001b[39m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[34;01merr\u001b[39;00m\n\u001b[32m   3820\u001b[39m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[32m   3821\u001b[39m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[32m   3822\u001b[39m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[32m   3823\u001b[39m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[32m   3824\u001b[39m     \u001b[38;5;28mself\u001b[39m._check_indexing_error(key)\n",
+      "\u001b[31mKeyError\u001b[39m: 'PRECIO_KILO'"
+     ]
+    }
+   ],
    "source": [
     "# Flete Miami\n",
     "\n",
